--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,3 +1,15 @@
+repositories {
+	mavenCentral()
+}
+
 dependencies {
 	compile project(":model")
+
+	testCompile "junit:junit:4.11"
+}
+
+test {
+	jvmArgs "-Xms128m", "-Xmx512m"
+
+	systemProperty "items", "20"
 }
