--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,3 +1,5 @@
+apply from: 'database.gradle'
+
 repositories {
 	mavenCentral()
 }
@@ -9,7 +11,21 @@ dependencies {
 }
 
 test {
-	jvmArgs "-Xms128m", "-Xmx512m"
+	//jvmArgs "-Xms128m", "-Xmx512m"
 
 	systemProperty "items", "20"
+
+	exclude '**/*IntegTest.class'
+	reports.html.destination = file ("$reports.html.destination/unit")
+	reports.junitXml.destination = file ("$reports.junitXml.destination/unit")
+}
+
+task integrationTest(type: Test){
+	description = 'Runs the integration test'
+	group = 'verification'
+	include '**/*IntegTest.class'
+	reports.html.destination = file ("$reports.html.destination/integration")
+	reports.junitXml.destination = file ("$reports.junitXml.destination/integration")
+	dependsOn startAndPrepareDatabase
+	finalizedBy stopDatabase
 }
